--- a/ProjetosMAUI/AppControleFinanceiro/AppControleFinanceiro.csproj
+++ b/ProjetosMAUI/AppControleFinanceiro/AppControleFinanceiro.csproj
@@ -57,6 +57,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="LiteDB" Version="5.0.14" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
 	</ItemGroup>
 
